Group table now sortable

--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -18,9 +18,9 @@
                 <table id="grouptable" class='grouptable'>
                     <thead>
                         <tr>
-                            <th>Group Name</th>
-                            <th>Group Description</th>
-                            <th>Number of Members</th>
+                            <th><a class="UP" onclick="sortTableByColumn(0,true)" href="javascript:void(0);">Group Name</a></th>
+                            <th><a class="UP" onclick="sortTableByColumn(1)" href="javascript:void(0);">Group Description</a></th>
+                            <th><a class="UP" onclick="sortTableByColumn(2)" href="javascript:void(0);">Number of Members</a></th>
                             <th>          </th>
                         </tr>
                     </thead>
