--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -1,7 +1,7 @@
-<div class="activity_controller">
+<div class='activity_controller'>
     <H1 class='pagetitle'>Activity Types</H1>
     <br>
-    <div class="container">
+    <div class='container'>
         <div class='activitytypecontainer'>
             <% if current_user.groupid == nil %>
                 <% if @actTypes.blank? %>
@@ -32,40 +32,43 @@
                     <H2 class='pagetitle'>No Existing Activity Types</H2>
                     <p>Make some below.</p>
                 <% else %>
-                    <% if @groupAdminID == current_user.id %>
-                        <H2 class='pagetitle'>Existing Activity Types</H2>
+                    <center>
+                        <input type='text' id='activityTypeSearchInput' class='searchBar' onkeyup='activityTypeSearch()' placeholder='Search for an entry...' title='Search here'>
+                        <select id='activityTypeSearchSelect' class='selectBar' onchange='activityTypeSearch()'>
+                            <option>Name</option>
+                            <option>Score</option>
+                        </select>
+                    </center>
+                    <H2 class='pagetitle'>Existing Activity Types</H2>
                         <br>
-                        <table class='activitytypetable'>
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Score</th>
-                                    <th>Activity Type Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% @actTypes.each do |actt| %>
+                        <table id='activitytypetable' class='activitytypetable'>
+                            <% if @groupAdminID == current_user.id %>
+                                <thead>
                                     <tr>
-                                        <td><%= link_to actt.name, {:action => 'edit', :id => actt.id} %></td>
-                                        <td><%= actt.score %></td>
-                                        <% if actt.verified %>
-                                            <td>Approved and Ready For Use</td>
-                                        <% else %>
-                                            <td>Awaiting Approval</td>
-                                        <% end %>
+                                        <th><a class="UP" onclick="sortActivityTypeTableByColumn(0,true)" href="javascript:void(0);">Name</a></th>
+                                        <th><a class="UP" onclick="sortActivityTypeTableByColumn(1)" href="javascript:void(0);">Score</a></th>
+                                        <th><a class="UP" onclick="sortActivityTypeTableByColumn(2)" href="javascript:void(0);">Activity Type Status</a></th>
                                     </tr>
-                                <% end %>
-                            </tbody>
-                        </table>
-                    <% else %>
-                        <H2 class='pagetitle'>Existing Activity Types</H2>
-                        <br>
-                        <table class='activitytypetable'>
+                                </thead>
+                                <tbody>
+                                    <% @actTypes.each do |actt| %>
+                                        <tr>
+                                            <td class='name'><%= link_to actt.name, {:action => 'edit', :id => actt.id} %></td>
+                                            <td><%= actt.score %></td>
+                                            <% if actt.verified %>
+                                                <td>Approved and Ready For Use</td>
+                                            <% else %>
+                                                <td>Awaiting Approval</td>
+                                            <% end %>
+                                        </tr>
+                                    <% end %>
+                                </tbody>
+                        <% else %>
                             <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Score</th>
-                                    <th>Activity Status</th>
+                                    <th><a class="UP" onclick="sortActivityTypeTableByColumn(0)" href="javascript:void(0);">Name</a></th>
+                                    <th><a class="UP" onclick="sortActivityTypeTableByColumn(1)" href="javascript:void(0);">Score</a></th>
+                                    <th><a class="UP" onclick="sortActivityTypeTableByColumn(2)" href="javascript:void(0);">Activity Type Status</a></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -81,12 +84,12 @@
                                     </tr>
                                 <% end %>
                             </tbody>
-                        </table>
-                    <% end %>
+                        <% end %>
+                    </table>
                 <% end %>
             <% end %>
             <br>
-            <%= render "shared/links" %>
+            <%= render 'shared/links' %>
         </div>
     </div>
 </div>
