--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -35,7 +35,7 @@
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(2)" href=javascript:void(0);>Person Who Done It</a></p></th>
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Time</a></p></th>
-                        <th><p class="link"><a onclick="sortTableByTime()" href=javascript:void(0);>Entry Date</a></p></th>
+                        <th><p class="link"><a onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Date</a></p></th>
                     </tr>
                 </thead>
                 <tbody>
