--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -1,12 +1,13 @@
 <!-- These links are for inside the controller -->
 <% if controller.controller_name == nil or controller.controller_name == 'activity' or controller.controller_name == '' %>
   <!-- Leave links for the activity controller here -->
-  <p class="link"><%= link_to (image_tag('button_log_new_activity.png')), {:action => 'new', :controller => 'activity'} %></p>
+  <%= button_to "Log New Activity", {:action => 'new', :controller => 'activity'}, :method => 'get', :type => 'button', :class => 'btn' %>
+  
   <br>
 <% end %>
 <% if controller.controller_name == 'activity_type' %>
   <!-- Leave links for the activity type controller -->
-  <p class="link"><%= link_to (image_tag('button_register_new_activity_type.png')), {:action => 'new', :controller => 'activity_type'} %></p>
+  <%= button_to "Register New Acitivty Type", {:action => 'new', :controller => 'activity_type'}, :method => 'get', :type => 'button', :class => 'btn' %>
   <br>
 <% end %>
 <% if controller.controller_name == 'group' %>
