table hovering highlight

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -27,11 +27,26 @@
                     <option>Person Who Done It</option>
                 </select>
             </center>
+            
+            
+            <!-- lololololololol -->
+            <title>Bootstrap Example</title>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <!-- lololololololol end -->
+            
+            
+            
+            
             <table id="activitytable" class="activitytable">
                 <thead>
                     <tr>
                         <!--<th><p class="link"><%= link_to "Activity Type", {:action => 'index', :controller => 'activity_type'}%></p></th> -->
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
+                        
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(2)" href=javascript:void(0);>Person Who Done It</a></p></th>
                         <th><p class="link"><a class="UP" onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Time</a></p></th>
