bootstrap table implementation (temporary)

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -29,14 +29,75 @@
             </center>
             
             
+            
+            
+            
+            
+            
+            
             <!-- lololololololol -->
-            <title>Bootstrap Example</title>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <!-- lololololololol -->
+            <html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>Hover Rows</h2>
+  <p>The .table-hover class enables a hover state on table rows:</p>            
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
             <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            <!-- lololololololol end -->
+            
             
             
             
@@ -53,6 +114,9 @@
                         <th><p class="link"><a onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Date</a></p></th>
                     </tr>
                 </thead>
+                
+                
+                
                 <tbody>
                     <% @acts.each do |act| %>
                         <% if act.userid == current_user.id %>
