table hovering highlight with activities implemented

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -35,68 +35,71 @@
             
             
             
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
-            <!-- lololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
+            <!-- lolololololololololololololol -->
             <html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-  <h2>Hover Rows</h2>
-  <p>The .table-hover class enables a hover state on table rows:</p>            
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-</body>
-</html>
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
-            <!-- lololololololol end -->
+            <head>
+              <title>Bootstrap Example</title>
+              <meta charset="utf-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1">
+              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            </head>
+            <body>
+            
+            <div class="container"><!-- old -->
+              <table id="activitytable" class="activitytable">
+                <thead>
+                  <tr>
+                    <th>Firstname</th>
+                    <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
+                    <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
+                    <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(2)" href=javascript:void(0);>Person Who Done It</a></p></th>
+                    <th><p class="link"><a class="UP" onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Time</a></p></th>
+                    <th><p class="link"><a onclick="sortActivityTableByTime()" href=javascript:void(0);>Entry Date</a></p></th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                  </tr>
+                  <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                  </tr>
+                  <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            
+            </body>
+            </html>
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
+            <!-- lolololololololololololololol end -->
             
             
             
@@ -136,6 +139,8 @@
                     <% end %>
                 </tbody>
             </table>
+            
+            
             <br>
             <%= render "shared/links" %>
         <% end %>
