--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -45,7 +45,7 @@
                         <% else %>
                             <tr class="activity">
                         <% end %>
-                            <td><p class="name"><%= link_to @actTypes.find(act.actid).name, {:action => 'show', :id => act.id} %></p></td>
+                            <td><p class="name"><%= link_to act.name, {:action => 'show', :id => act.id} %></p></td>
                             <td><p class="duration"><%= act.duration %></p></td>
                             <td><p class="user"><%= @users[act.userid] %></p></td>
                             <td><%= content_tag :p, :id => act.created_at, :class => "timestamp" do %> 
