--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -18,9 +18,9 @@
                 <table id="grouptable" class='grouptable'>
                     <thead>
                         <tr>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(0,true)" href="javascript:void(0);">Group Name</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(1)" href="javascript:void(0);">Group Description</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(2)" href="javascript:void(0);">Number of Members</a></th>
+                            <th><a class="UP" onclick="sortGroupTableByColumn(0,'grouptable',true)" href="javascript:void(0);">Group Name</a></th>
+                            <th><a class="UP" onclick="sortGroupTableByColumn(1,'grouptable')" href="javascript:void(0);">Group Description</a></th>
+                            <th><a class="UP" onclick="sortGroupTableByColumn(2,'grouptable')" href="javascript:void(0);">Number of Members</a></th>
                             <th>          </th>
                         </tr>
                     </thead>
