--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -6,10 +6,11 @@
             <H2 class='pagetitle'>View Group</H2>
             <br>
             <center>
-                <table>
+                <table id="groupmembertable">
                     <thead>
-                        <th>Member Name</th>
-                        <th>Member Score</th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
                     </thead>
                     <tbody>
                         <% @users.each do |user| %>
@@ -21,8 +22,9 @@
                                     <% elsif @scores[user.id]==0%>
                                         <td>Has done nothing</td>
                                     <% else %>
-                                        <td><%= @scores[user.id].round(4) %></td>
+                                        <td><%= user.score.round(4) %></td>
                                     <% end %>
+                                    <td><%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%></td>
                                 </tr>
                             <% else %>
                                 <tr>
@@ -32,7 +34,10 @@
                                     <% elsif @scores[user.id]==0%>
                                         <td>Has done nothing</td>
                                     <% else %>
-                                        <td><%= @scores[user.id].round(4) %></td>
+                                        <td><%= user.score.round(4) %></td>
+                                    <% end %>
+                                    <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                        <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
                                     <% end %>
                                 </tr>
                             <% end %>
