--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header>
+  <div class="page-header">
     <center><H2><%= link_to (image_tag('doing_together.png')), '/application/index', :class => 'title'%></H2></center>
     <div id="headercontainer">
         
