--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<% if controller.controller_name == "activity" %>
+  <body onload="automateActivityAJAX()">
+<% else %>
+  <body>
+<% end %>
   <header>
     <center><H2><%= link_to (image_tag('doing_together.png')), '/application/index', :class => 'title'%></H2></center>
     <div id="headercontainer">
