Group tables are now sortable by both users and admins. If an admin goes to the group view page instead of edit like they are supposed to, they get redirected instead

--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -24,7 +24,9 @@
                                     <% else %>
                                         <td><%= user.score.round(4) %></td>
                                     <% end %>
-                                    <td><%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%></td>
+                                    <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                        <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                    <% end %>
                                 </tr>
                             <% else %>
                                 <tr>
