--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -6,10 +6,11 @@
             <H2 class='pagetitle'>Edit Group</H2>
             <br>
             <center>
-                <table>
+                <table id="groupAdminTable">
                     <thead>
-                        <th>Member Name</th>
-                        <th>Member Score</th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupAdminTable')" href="javascript:void(0);">Member Name</a></th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupAdminTable')" href="javascript:void(0);">Member Score</a></th>
+                        <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupAdminTable',false,true)" href="javascript:void(0);">Last Activity</a></th>
                         <th>            </th>
                         <th>            </th>
                     </thead>
@@ -19,6 +20,9 @@
                                 <tr class="curgroup">
                                     <td><%= user.full_name %></td>
                                     <td><%= @scores[user.id] %></td>
+                                    <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                        <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                    <% end %>
                                     <td>You are already the group admin</td>
                                     <td></td>
                                 </tr>
@@ -26,6 +30,7 @@
                                 <tr>
                                     <td><%= user.full_name %></td>
                                     <td><%= @scores[user.id] %></td>
+                                    <td><%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%></td>
                                     <td><%= link_to (image_tag('button_make_group_admin.png')), 
                                         {:action => 'makeadmin', :id => @group.id, :uid => user.id}, :method => 'patch',
                                         data: {:confirm => "Are you sure you want to make #{user.full_name} the admin of #{@group.name}?"},
