--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -24,8 +24,12 @@
                                     <% else %>
                                         <td><%= user.score.round(4) %></td>
                                     <% end %>
-                                    <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                        <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                    <% if user.lastActivity == nil %>
+                                        <td id="1e100000">user.full_name has not yet participated.</td>
+                                    <% else %>
+                                        <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                            <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                        <% end %>
                                     <% end %>
                                 </tr>
                             <% else %>
@@ -38,8 +42,12 @@
                                     <% else %>
                                         <td><%= user.score.round(4) %></td>
                                     <% end %>
-                                    <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                        <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                    <% if user.lastActivity == nil %>
+                                        <td id="1e100000">user.full_name has not yet participated.</td>
+                                    <% else %>
+                                        <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                            <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                        <% end %>
                                     <% end %>
                                 </tr>
                             <% end %>
