--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -21,7 +21,7 @@
                                     <td><%= user.full_name %></td>
                                     <td><%= @scores[user.id] %></td>
                                     <% if user.lastActivity == nil %>
-                                        <td id="1e100000">user.full_name has not yet participated.</td>
+                                        <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
                                     <% else %>
                                         <%= content_tag :td, :id =>user.lastActivity.created_at do %>
                                             <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
@@ -35,7 +35,7 @@
                                     <td><%= user.full_name %></td>
                                     <td><%= @scores[user.id] %></td>
                                     <% if user.lastActivity == nil %>
-                                        <td id="1e100000">user.full_name has not yet participated.</td>
+                                        <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
                                     <% else %>
                                         <%= content_tag :td, :id =>user.lastActivity.created_at do %>
                                             <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
