got rid of activity_type table css, new look for table

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -55,8 +55,8 @@
             <body>
             
             <div class="container">
-              <table id="activitytable" class="table table-hover table-border">
-                <thead>
+              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-dark">
+                <thead class="thead-dark">
                   <tr>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
