--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,7 +81,7 @@ body {
 
 .userlink {
     padding: 0px!important;
-    color: #6dc2ff;
+    /*color: #6dc2ff;*/
     font-size: 12px!important;
     border-radius: 0px!important;
 }
