new table color and hover

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -55,7 +55,7 @@
             <body>
             
             <div class="container">
-              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-dark">
+              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-dark" style="background-color: #d8ed53">
                 <thead class="thead-dark">
                   <tr>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
