new table warning background

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -55,9 +55,9 @@
             <body>
             
             <div class="container">
-              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-dark" style="background-color: #d8ed53">
-                <thead class="thead-dark">
-                  <tr>
+              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive" style="background-color: yellow">
+                <thead>
+                  <tr class="warning">
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(2)" href=javascript:void(0);>Person Who Done It</a></p></th>
