--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -32,7 +32,7 @@
             
             <div class="container col-sm-12">
                 
-              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-dark">
+              <table id="activitytable" class="table table-hover table-bordered table-dark table-responsive table-condensed">
                 <thead class="thead-dark">
                   <tr>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
@@ -62,27 +62,10 @@
                     <% end %>
                 </tbody>
               </table>
+              <center>
+                  <p id="pageLinks"></p>
+              </center>
             </div>
-            
-            </body>
-            </html>
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            <!-- lolololololololololololololol end -->
-            
-            
-            
-            
-            <!--
-                in application_backup_memory file
-            -->
             
             <br>
             <%= render "shared/links" %>
